# procinfo-ng

./: IRQs.cpp  LICENSE.txt  Makefile  Makefile.in  configure  configure.in  cpucount.cpp  cygwin_getvmstat.cpp  cygwin_procstat.cpp  cygwin_rendercpupagestat.cpp  diskStats.cpp  getmeminfo.cpp  interrupts.cpp  linux26_getvmstat.cpp  linux26_netstat.cpp  linux26_procstat.cpp  linux26_rendercpupagestat.cpp  prettyPrint.cpp  procinfo-ng  procinfo.8  procinfo.cpp  procinfo.h  procinfo.pl  procinfo_18-1.dsc  project.config  rendercpupagestat.cpp  routines.cpp  sysinfo.cpp  testTime.cpp  timeRoutines.cpp
lib/: ncurses_compat.h  prettyPrint.cpp  routines.cpp  timeRoutines.cpp
procinfo-18/debian/: changelog  control  copyright  links  rules  watch
procinfo-18/debian/patches/: 00list  01_procinfo_use_HZ_from_kernel.dpatch  02_procinfo_paging_swap_disk_statistics_on_2.6.dpatch  03_procinfo_fix_CPU_percentage_display_on_2.6.dpatch  04_procinfo_extend_load_average_in_manpage.dpatch  05_procinfo_prevent_buffer_overflows.dpatch  06_procinfo_manpage_typo.dpatch  08_procinfo_simplify_counting_CPUs.dpatch
tests/: sizes.c  testTime.cpp
