#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([procinfo.cpp])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h sys/ioctl.h termios.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STRTOD
AC_CHECK_FUNCS([select strtol strtoul strtoull])

AC_ARG_ENABLE(maintainer-mode, [ --enable-maintainer-mode	Enables debug symbols and disables optimizations [default=no]],
[ enable_maintainer_mode=yes ])

if test "$enable_maintainer_mode" = "yes"; then
	CFLAGS="-O0 -g3 --pipe -Wall"
	LDFLAGS=""
else
	CFLAGS="$CFLAGS -pipe"
	LDFLAGS="-s"
fi

AC_OUTPUT(Makefile)
#AC_CONFIG_FILES([Makefile])
#AC_OUTPUT
